# Alpha_Generator

./: .dockerignore  .env.example  .gitignore  AGENTS_README.md  ARCHITECTURE.md  CONTEXT.md  DOCUMENT_EVALUATION.md  FIRST_STEPS.txt  IMPROVEMENT_PLAN.md  MCP_USAGE.md  PROJECT_GOALS.md  QUEUE_COMMANDS.md  README.md  RESEARCH_LOG.md  RESEARCH_SUMMARY.md  SESSION_LESSONS_2026_06_06.md  STARTUP_GUIDE.md  STRICT_RULES.md  System.md  WORK.md  WORKFLOW.md  _smoke_ops.py  all_workflow.md  alpha_agent.py  alpha_skills.rar  benchmark_compare.py  check_self_corr.py  compare_with_worldquant_miner.py  config.py  crawl_datasets.py  create_final_dataset.py  data_processor.py  debug_parse.py  debug_results.py  debug_simulate.py  debug_simulate2.py  debug_simulate3.py  deploy.md  design.md  docker-compose.agents.yml  (+27 more)
.claude/: settings.json
alpha_skills/: README.md  Skill.md  alpha_skills.rar  final_dataset.rar  knowledge_retriever.py  worldquant_alpha_researcher.md  wq-alpha.skill
analytics/: __init__.py  describe.py  explore.py  hypothesize.py  market_data.py
api_layer/: __init__.py  monitor_api.py  rate_limiter.py  session_manager.py  wq_client.py
backup/: backup_manager.py  restore.py
config/: __init__.py  alpha_config.yaml  codex-mcp-skills.template.toml  deerflow.9router.container.yaml  deerflow.9router.example.yaml  deerflow.legacy.conf.yaml  finding_alphas.placeholder.md  hermes.9router.example.yaml  hermes.9router.runtime.yaml  loader.py  settings.yaml  theory_entry.template.json
crawlers/: __init__.py  base.py  wqb_datafields.py  wqb_datasets.py  wqb_operators.py
(+1100 files in other folders)
