[project]
name = "wq-alpha-system"
version = "0.1.0"
description = "WorldQuant Brain alpha research and dry-run submission system."
readme = "System.md"
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0.2",
  "requests>=2.32.3",
  "schedule>=1.2.2",
  "fastapi>=0.118.0",
  "uvicorn>=0.37.0",
  "backtesting>=0.6.5",
  "yfinance>=1.3.0",
]

[project.optional-dependencies]
rag = [
  "chromadb>=0.5.23",
  "langchain>=0.3.25",
  "langchain-community>=0.3.24",
  "pypdf>=5.5.0",
]
agents = [
  "langgraph>=0.3.34",
]

[tool.uv]
package = false
